<resources>
    <string name="app_name">TO DO LIST</string>
    <string name="add">Add</string>
    <string name="del">Del</string>
    <string name="add_new_to_do_list">Add New To Do List</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="clear">Clear</string>
    <string name="to_do_list_item">To Do List Item</string>
    <string name="search">Search</string>
</resources>